# scrubfile

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CNAME  CONTRIBUTING.md  PLAN.md  README.md  index.html  pii_terms.txt  pyproject.toml  review_1.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-full.yml  ci.yml
assets/: demo.tape
docs/: COMPARATIVE_ANALYSIS.md  README.md
docs/plans/: 20260329_security-audit.md  PLAN.md  review_1.md
examples/: README.md  generate_examples.py  sample_contract.docx
src/redactor/: __init__.py  cli.py  detector.py  image.py  ocr.py  pdf.py  utils.py
src/scrubfile/: __init__.py  cli.py  detector.py  docx_redactor.py  image.py  mcp_server.py  pdf.py  recognizers.py  utils.py
tests/: conftest.py  test_api.py  test_api_multiformat.py  test_auto_redact.py  test_behavioral_pii.py  test_cli.py  test_detector.py  test_docx.py  test_golden_documents.py  test_image.py  test_model_harness.py  test_pdf.py  test_recognizers.py  test_thorough.py  test_utils.py
