[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrubfile"
version = "1.0.0"
description = "Scrub PII from PDFs, images, and DOCX files. Local-only. One command."
requires-python = ">=3.10"
license = "AGPL-3.0-only"
readme = "README.md"
authors = [
    { name = "Aniket Deshmukh" },
]
keywords = [
    "pii", "redaction", "privacy", "pdf", "ocr", "hipaa", "gdpr",
    "cli", "presidio", "document-redaction", "security", "data-privacy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "PyMuPDF>=1.24.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "easyocr>=1.7",
    "Pillow>=10.0",
    "python-docx>=1.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
]

[project.urls]
Homepage = "https://scrubfile.com"
Repository = "https://github.com/scrubfile/scrubfile"
Issues = "https://github.com/scrubfile/scrubfile/issues"
Documentation = "https://github.com/scrubfile/scrubfile#readme"

[project.scripts]
scrubfile = "scrubfile.cli:app"

[project.optional-dependencies]
tesseract = ["pytesseract"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scrubfile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
